<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_series_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:drawableTop="@drawable/ic_expand_more_white_24dp"
        android:text="@string/series_name"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_episode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/series_season_and_ep"
        android:textColor="@color/colorSecondFont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_series_name" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <ImageView
        android:id="@+id/image_icon_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/icon_message"
        app:layout_constraintStart_toStartOf="@+id/guideline_msg"
        app:layout_constraintTop_toBottomOf="@+id/txt_episode"
        app:srcCompat="@drawable/ic_message_24dp" />

    <ImageView
        android:id="@+id/image_icon_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/icon_volume"
        app:layout_constraintStart_toStartOf="@+id/guideline_star"
        app:layout_constraintTop_toBottomOf="@+id/txt_episode"
        app:srcCompat="@drawable/ic_volume_24dp" />

    <ImageView
        android:id="@+id/image_icon_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/icon_star"
        app:layout_constraintEnd_toStartOf="@+id/guideline_volume"
        app:layout_constraintTop_toBottomOf="@+id/txt_episode"
        app:srcCompat="@drawable/ic_star_24dp" />

    <ImageView
        android:id="@+id/image_icon_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/icon_description"
        app:layout_constraintEnd_toStartOf="@+id/guideline_description"
        app:layout_constraintTop_toBottomOf="@+id/txt_episode"
        app:srcCompat="@drawable/ic_description_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>